# OSDQuestions

./: CMakeLists.txt  CMakePresets.json  README.md
bfr_tutorial/: CMakeLists.txt
bfr_tutorial/study_1_3/original/: CMakeLists.txt  bfr_tutorial_1_3.cpp
far_tutorial/: CMakeLists.txt
far_tutorial/study_2_2/read_obj/: obj_far_tutorial_2_2.cpp
far_tutorial/study_5_1/: CMakeLists.txt
far_tutorial/study_5_1/original/: CMakeLists.txt
far_tutorial/study_5_1/read_obj/: CMakeLists.txt  obj_far_tutorial_5_1.cpp
limit_stencil_with_fvar_uv/: CMakeLists.txt  README.md  bfr_tutorial_1_3.cpp
patchmap/: CMakeLists.txt  david_yu_suggestions_far_tutorial_5_1.cpp  original_far_tutorial_5_1.cpp  patchmap_main.cpp  shape_utils.h
study_far_tutorial_1_2/original/: CMakeLists.txt
study_far_tutorial_2_2/original/: CMakeLists.txt
study_far_tutorial_2_2/read_obj/: CMakeLists.txt  obj_far_tutorial_2_2.cpp
study_far_tutorial_5_1/: CMakeLists.txt
study_far_tutorial_5_1/original/: CMakeLists.txt
study_far_tutorial_5_1/read_obj/: CMakeLists.txt  obj_far_tutorial_5_1.cpp
utils/: CMakeLists.txt  meshLoader.h
